objects/DMAPP__DM_Coach_Rule_Part__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the Coach Rule sub-parts or clauses. These can be edited as detail sections of the Coach Rules page.</description>
    <fields>
        <fullName>DMAPP__DM_Coach_Rule__c</fullName>
        <label>DM Coach Rule</label>
        <referenceTo>DMAPP__DM_Coach_Rule__c</referenceTo>
        <relationshipName>DM_Coach_Rule_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Execution_Order__c</fullName>
        <label>Execution Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Join_Rule_Part_No__c</fullName>
        <label>Join Rule Part No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Primitive_Type__c</fullName>
        <label>Primitive Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Rule_Part_Name__c</fullName>
        <label>Rule Part Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Rule_Part__c</fullName>
        <label>Rule Part</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <label>Coach Rule Part</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coach Rule Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coach Rule Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>